# Aps3_Emulator

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/net/rpcsx/: GraphicsFrame.kt  MainActivity.kt  ProgressRepository.kt  RPCSXTheme.kt  UserRepository.kt
app/src/main/java/net/rpcsx/overlay/: OverlayEditActivity.kt  PadOverlay.kt  PadOverlayDpad.kt
app/src/main/java/net/rpcsx/ui/channels/: UpdateChannelListScreen.kt  UpdateChannelsScreen.kt
app/src/main/java/net/rpcsx/ui/drivers/: GpuDriversScreen.kt
app/src/main/java/net/rpcsx/ui/games/: GamesScreen.kt
app/src/main/java/net/rpcsx/ui/navigation/: AppNavHost.kt
app/src/main/java/net/rpcsx/ui/settings/: SettingsScreen.kt
app/src/main/java/net/rpcsx/ui/settings/components/base/: BasePreference.kt
app/src/main/java/net/rpcsx/ui/settings/components/core/: MaterialSwitch.kt
app/src/main/java/net/rpcsx/ui/settings/components/preference/: HomePreference.kt  ListPreference.kt  RegularPreference.kt  SwitchPreference.kt
app/src/main/java/net/rpcsx/ui/user/: UsersScreen.kt
app/src/main/java/net/rpcsx/utils/: DriversFetcher.kt  GitHub.kt  GpuDriverHelper.kt  InputBindingPrefs.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/net/rpcsx/: ExampleUnitTest.kt
